--- a/TravelingColombia/Views/Pago/Index.cshtml
+++ b/TravelingColombia/Views/Pago/Index.cshtml
@@ -1,3 +1,4 @@
+@model TravelingColombia.ViewModels.PagosGenericoViewModel
 <div class="min-h-screen bg-gradient-to-b  flex flex-col items-center p-6 space-y-6">
     <!-- Botones superiores -->
     <div
@@ -30,46 +31,56 @@
                 class="relative bottom-18  text-2xl w-[900px] h-[60px] rounded-full  border left-60 bg-white font-bold text-center pt-2">
                 Gestion de Pagos</h2>
             <!-- Formulario -->
-            <form class="flex flex-wrap gap-x-10 gap-y-5 w-full p-6 bg-white rounded-xl shadow-lg">
+            <form asp-action="Index" asp-controller="Pago" method="post"
+                class="flex flex-wrap gap-x-10 gap-y-5 w-full p-6 bg-white rounded-xl shadow-lg">
 
                 <!-- Campos personalizados -->
                 <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Nombre</label>
-                    <input type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
+                    <label class="mb-1 font-semibold text-gray-700">Cedula</label>
+                    <input name="Cedula" type="text" placeholder="Ingrese Cedula"
+                        class="p-2 rounded-lg border border-gray-300" />
+                </div>
+                <div class="flex flex-col flex-1 min-w-[200px]">
+                    <label class="mb-1 font-semibold text-gray-700">Cuenta</label>
+                    <input name="Cuenta" type="text" placeholder="Ingrese Cuenta"
+                        class="p-2 rounded-lg border border-gray-300" />
                 </div>
 
                 <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Tipo</label>
-                    <select class="p-2 rounded-lg border border-gray-300">
-                        <option value="">Seleccione Tipo</option>
-                        <option value="1">1</option>
+                    <label class="mb-1 font-semibold text-gray-700">Banco</label>
+                    <select name="IdBanco" class="p-2 rounded-lg border border-gray-300">
+                        <option value="">Seleccione Banco</option>
+                        @foreach (var banco in Model.ListadoBnaco)
+                        {
+                            <option value="@banco.IdBanco">@banco.NombreBanco</option>
+                        }
+                    </select>
+                </div>
+                <div class="flex flex-col flex-1 min-w-[200px]">
+                    <label class="mb-1 font-semibold text-gray-700">Metodo Pago</label>
+                    <select name="IdMetodo" class="p-2 rounded-lg border border-gray-300">
+                        <option value="">Seleccione Metodo</option>
+                        @foreach (var Metodo in Model.ListadoMetodoPagos)
+                        {
+                            <option value="@Metodo.IdMetodo">@Metodo.MetodoPago1</option>
+                        }
                     </select>
                 </div>
 
+
+
                 <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Fecha Mínima</label>
-                    <input type="date" class="p-2 rounded-lg border border-gray-300" />
-                </div>
-                <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Fecha Máxima</label>
-                    <input type="date" class="p-2 rounded-lg border border-gray-300" />
-                </div>
-                <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Precio Mínimo</label>
-                    <input type="number" placeholder="Ingrese precio mínimo"
+                    <label class="mb-1 font-semibold text-gray-700">Monto</label>
+                    <input name="Monto" type="number" placeholder="Ingrese precio"
                         class="p-2 rounded-lg border border-gray-300" />
                 </div>
-                <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Precio Máximo</label>
-                    <input type="number" placeholder="Ingrese precio máximo"
-                        class="p-2 rounded-lg border border-gray-300" />
-                </div>
+
 
                 <!-- Botón buscar -->
                 <div class="flex justify-center w-full mt-4">
                     <button type="submit"
                         class="bg-[#3085BC] hover:bg-[#3084bcd2] text-white font-bold py-3 px-8 rounded-full transition duration-300">
-                        Buscar
+                        Listar
                     </button>
                 </div>
             </form>
@@ -81,22 +92,35 @@
                     <thead>
                         <tr class="bg-[#3085BC] text-white text-sm sm:text-base">
                             <th class="px-4 py-2 border">Usuario</th>
-                            <th class="px-4 py-2 border">metodo de pago</th>
-                            <th class="px-4 py-2 border">Fecha de pago</th>
-                            <th class="px-4 py-2 border">tipo de reserva</th>
+                            <th class="px-4 py-2 border">Cedula</th>
+                            <th class="px-4 py-2 border">Banco</th>
+                            <th class="px-4 py-2 border">Cuenta</th>
+                            <th class="px-4 py-2 border">Metodo</th>
                             <th class="px-4 py-2 border">Monto</th>
-                            <th class="px-4 py-2 border">Estado</th>
+                            <th class="px-4 py-2 border">Acciones</th>
+
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="text-sm sm:text-base hover:bg-[#3085BC]/30 transition">
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                        </tr>
+                        @foreach (var item in Model.ListadoPagos)
+                        {
+                            <tr class="text-sm sm:text-base hover:bg-[#3085BC]/30 transition">
+                                <td class="px-4 py-2 border">@item.NombreUsuario</td>
+                                <td class="px-4 py-2 border">@item.CedulaUsuario</td>
+                                <td class="px-4 py-2 border">@item.NombreBanco</td>
+                                <td class="px-4 py-2 border">@item.CuentaBanco</td>
+                                <td class="px-4 py-2 border">@item.MetodoPago</td>
+                                <td class="px-4 py-2 border">$@item.Monto</td>
+                                <td class="px-4 py-2 border">
+                                    <div class="flex justify-center">
+                                        <a asp-action="Editar" asp-controller="Pago" asp-route-id="@item.IdPago" class="btn bg-white hover:bg-yellow-600">Editar</a>
+                                        
+
+                                    </div>
+                                </td>
+
+                            </tr>
+                        }
 
 
 
@@ -111,7 +135,7 @@
     <div id="Crear" class="max-w-3xl mx-auto mt-10 bg-white p-8 rounded-lg shadow-lg hidden">
         <h2 class="text-2xl font-bold mb-6 text-center text-[#4ade80]">Registrar Pago</h2>
 
-        <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <form method="post" asp-action="Crear" asp-controller="Pago" class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
             <!-- Nombre -->
             <div>
@@ -132,13 +156,14 @@
             <!-- Banco -->
             <div>
                 <label for="id_banco" class="block text-gray-700 font-semibold mb-1">Banco</label>
-                <select id="id_banco" name="Id_Banco"
+                <select id="id_banco" name="IdBanco"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#4ade80]"
                     required>
                     <option value="">Seleccione un banco</option>
-                    <option value="1">Bancolombia</option>
-                    <option value="2">Davivienda</option>
-                    <option value="3">BBVA</option>
+                     @foreach (var banco in Model.ListadoBnaco)
+                        {
+                            <option value="@banco.IdBanco">@banco.NombreBanco</option>
+                        }
                     <!-- Agrega más bancos según tu base de datos -->
                 </select>
             </div>
@@ -146,7 +171,7 @@
             <!-- Cuenta -->
             <div>
                 <label for="cuenta" class="block text-gray-700 font-semibold mb-1">Número de Cuenta</label>
-                <input type="text" id="cuenta" name="cuenta" placeholder="Ej: 1234567890"
+                <input type="text" id="cuenta" name="Cuenta" placeholder="Ej: 1234567890"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#4ade80]"
                     required />
             </div>
@@ -162,13 +187,15 @@
             <!-- Método de pago -->
             <div>
                 <label for="id_metodo" class="block text-gray-700 font-semibold mb-1">Método de Pago</label>
-                <select id="id_metodo" name="Id_Metodo"
+                <select id="id_metodo" name="IdMetodo"
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#4ade80]"
                     required>
+                    
                     <option value="">Seleccione método</option>
-                    <option value="1">Transferencia</option>
-                    <option value="2">Tarjeta</option>
-                    <option value="3">Efectivo</option>
+                     @foreach (var Metodo in Model.ListadoMetodoPagos)
+                        {
+                            <option value="@Metodo.IdMetodo">@Metodo.MetodoPago1</option>
+                        }
                     <!-- Agrega más métodos según tu base de datos -->
                 </select>
             </div>
